--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -96,6 +96,7 @@
     <EmbeddedResource Include="Modeling\Spectroscopy\Resources\SpectralDictionary.xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
     <PackageReference Include="csmpfit" Version="1.1.1" />
     <PackageReference Include="MathNet.Numerics" Version="4.11.0" />
     <PackageReference Include="Meta.Numerics" Version="4.0.7" />
